# mcp_chat

./: .gitignore
.cursor/rules/: architecture.mdc  browser-tool.mdc  fastapi.mdc  functional-requirements.mdc  langchain.mdc  mongodb.mdc  mysql.mdc  python.mdc  redis.mdc  vue3.mdc
browser-tools-mcp/: .gitignore  LICENSE  README.md
browser-tools-mcp/browser-tools-mcp/: README.md  mcp-server.ts  package-lock.json  package.json  tsconfig.json
browser-tools-mcp/browser-tools-server/: README.md  browser-connector.ts  package-lock.json  package.json  puppeteer-service.ts  tsconfig.json
browser-tools-mcp/browser-tools-server/lighthouse/: accessibility.ts  seo.ts  (+4 more)
browser-tools-mcp/chrome-extension/: background.js  devtools.html  devtools.js  manifest.json  panel.html  panel.js
browser-tools-mcp/docs/: mcp-docs.md  mcp.md
mcp_mysql/: .gitignore  README.md  pyproject.toml  requirements.txt
mcp_mysql/src/: server.py
mcp_mysql/src/config/: __init__.py  dbconfig.py
mcp_mysql/src/handles/: __init__.py  base.py  execute_sql.py  get_chinese_initials.py  get_db_health_running.py  get_table_desc.py  get_table_index.py  get_table_lock.py  get_table_name.py
mcpapp/: .gitignore
mcpapp/backend/: .env.example  alembic.ini  main.py  requirements.txt
mcpapp/docs/: ARCHITECTURE.md  README.md
mcpapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
memory-bank-mcp/: .gitignore  .npmrc  Dockerfile  LICENSE  README.md  custom-instructions.md  package-lock.json  package.json  smithery.yaml  tsconfig.json  vitest.config.ts
servers/: package-lock.json
(+160 files in other folders)
